# murphy

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
source/: gl.cpp  gl.hpp  grad.hpp  image.hpp  main.cpp  optimizer.hpp  raster.hpp  render.hpp
